# petcollar-x1-ble-firmware

./: .gitignore  CMakeLists.txt  README.md  prj.conf
boards/: nrf5340dk_nrf5340_cpuapp.overlay
docs/superpowers/plans/: 2026-06-24-ble-gatt-profile.md
docs/superpowers/specs/: 2026-06-24-ble-gatt-profile-design.md
include/: ble.h  ble_pet_collar_service.h  sensors.h
src/: ble.c  ble_pet_collar_service.c  led.c  main.c  power.c  sensors.c
tests/ble_structs/: CMakeLists.txt
tests/ble_structs/src/: main.c
